[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scripts/LevelsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/basic.theme" type="Theme" id=2]

[node name="LevelsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 392.0
margin_right = 632.0
margin_bottom = 600.0
custom_constants/separation = 20
alignment = 1

[node name="LevelsList" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 240.0
margin_bottom = 290.0
rect_min_size = Vector2( 240, 0 )
theme = ExtResource( 2 )
text = "choose level"

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 240.0
margin_bottom = 336.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
text = "back to menu"

[connection signal="item_focused" from="HBoxContainer/VBoxContainer/LevelsList" to="." method="mouse_entered"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/LevelsList" to="." method="level_selected"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/LevelsList" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/LevelsList" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/BackButton" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/BackButton" to="." method="mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BackButton" to="." method="back_to_menu"]
